# whatthefn

./: Cargo.toml  build.rs  todo.txt
data/: com.github.jms55.WhatTheFn.gresource.xml  style-dark.css  style.css
data/blp/: application_window.blp
res/: com.github.jms55.WhatTheFn.gresource.xml  style-dark.css  style.css
res/blp/: profile_page.blp  profile_setup_page.blp
src/: application_window.rs  main.rs  page_view.rs  profile_page.rs  profile_page_view.rs  profile_setup_page.rs  profile_tab.rs  timeline_range.rs  timeline_row.rs  timeline_ticker.rs  timeline_view.rs
src/perf_data_parser/: event_mmap2.rs  event_sample.rs  mod.rs  perf_data_parser.rs  perf_json_parser.rs  symbolicator.rs  wtf_profile_design.txt
