[package]
name = "whatthefn"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.4", package = "gtk4" }
adw = { version = "0.1", package = "libadwaita" }
glib = "0.15"
gio = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
addr2line = "0.17"
bitflags = "1.3"

[build-dependencies]
gio = "0.15"
