[package]
name = "whatthefn"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4" }
adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
once_cell = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
addr2line = "0.17"
bitflags = "1.3"

[build-dependencies]
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
