[package]
name = "whatthefn"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4" }
adw = { git = "https://gitlab.gnome.org/msandova/libadwaita-rs", branch = "entry-row-3-with-a-vengeance", package = "libadwaita", features = [
    "v1_2",
] }
glib = { git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro" }
gio = { git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
addr2line = "0.17"
bitflags = "1.3"

[build-dependencies]
gio = { git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro" }

[patch."https://github.com/gtk-rs/gtk-rs-core.git"]
glib = { git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro" }
gio = { git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro" }
pango = { git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro" }
glib-sys = { git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro" }
gobject-sys = { git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro" }
gio-sys = { git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro" }
pango-sys = { git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro" }
